--- a/css/estilos.css
+++ b/css/estilos.css
@@ -8,7 +8,7 @@
   
   body {
     align-items: center;
-    background-image:url(../imagens/54e2921595b9c-savanas (1).jpg) ;
+    background-image:url("../imagens/54e2921595b9c-savanas (1).jpg") ;
     display: flex;
     justify-content: center;
     flex-direction: column;
